Update some text, add gifs to MyBnB, update resume.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header>
 								<h2 class="alt">Hello I'm <strong>Tristan Blarel</strong><br/></h2>
 								<p clsas="hero-text">I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
-								<a href="./resume_may_2019.pdf" class="button download">
+								<a href="./resume_june_2019.pdf" class="button download">
 									<i class="fa fa-file" style="padding-left: .5em"></i>
 									<div class="button-text">
 										Download Resume
@@ -78,7 +78,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Here is some of my recent work. Although I am seeking a role as a Developer, I also have experience in Web Design and a passion 
+							<p>Here is some of my recent work. While I am seeking a role as a Full Stack Developer, I also have experience in Web Design and a passion 
 								for UI, Graphic Design, Photo / Video Editing, and Photography. </p>
 
 							<div class="row">
@@ -100,22 +100,23 @@
 														<div class="top">
 															<div class="left">
 																<button class="slideButton left-button" onclick="plusDivs(-1,'one')">&#10094;</button>
-
 																<div class="mySlides one" >
-																	<img src="./subpage/mybnb/1.png" alt="img1">
+																	<iframe src='https://giant.gfycat.com/SatisfiedLikelyGalapagosalbatross.webm' frameborder='0' scrolling='no' allowfullscreen
+																		width='100%' height='30%'></iframe>
+																	<!-- <img src="./subpage/mybnb/1.png" alt="img1"> -->
 																</div>
 																<div class="mySlides one" >
-																	<img src="./subpage/mybnb/2.png" alt="img2">
+																	<iframe src='https://giant.gfycat.com/MellowLoathsomeBoubou.webm' frameborder='0' scrolling='no' allowfullscreen
+																		width='100%' height='30%'></iframe>
+																	<!-- <img src="./subpage/mybnb/3.png" alt="img3"> -->
 																</div>
 																<div class="mySlides one" >
-																	<img src="./subpage/mybnb/3.png" alt="img3">
+																	<iframe src='https://giant.gfycat.com/UnlawfulUnlawfulArchaeocete.webm' frameborder='0' scrolling='no' allowfullscreen 
+																	width='100%' height='30%'></iframe>
 																</div>
 																<div class="mySlides one" >
-																	<img src="./subpage/mybnb/4.png" alt="img4">
+																	<img src="./subpage/mybnb/icons.jpg" alt="img4">
 																</div>
-																<!-- <img class="mySlides one" src="./subpage/mybnb/2.png" alt="img2">
-																<img class="mySlides one" src="./subpage/mybnb/3.png" alt="img3">
-																<img class="mySlides one" src="./subpage/mybnb/4.png" alt="img4"> -->
 																<button class="slideButton right-button" onclick="plusDivs(+1,'one')">&#10095;</button>
 															</div>
 															<div class="right">
@@ -125,7 +126,9 @@
 																	<br><br>
 																	The project was planned, designed, and developed within a 10-day timeframe, although improvements and
 																	additional features will
-																	continue to be fleshed out.</p>
+																	continue to be fleshed out. Using media queries and FlexBox I made sure to design my site to be responsive and pleasant to use 
+																	on many screen sizes. As shown in the slides above, I also designed my own set of icons, 
+																	animations, and my own take on the AirBnB logo for the project. </p>
 															</div>
 														
 															<div class="row links">
