Add modal, tile, and info for JavaScript project

--- a/index.html
+++ b/index.html
@@ -254,17 +254,58 @@
 													</div>
 												</div>
 
-									<article class="item trigger four">
-										<a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>BackCountry | Scripting & Art</h3>
-										</header>
-										<footer>
-											<i class="other icon-unity"></i>
-											<i class="fas fa-code"></i>
-											<i class="fab fa-adobe"></i>
-										</footer>
-									</article>
+												<article class="item trigger eight">
+													<a class="image fit"><img src="images/pic09.jpg" alt="" /></a>
+													<header>
+														<h3>Music Visualizer</h3>
+													</header>
+													<footer>
+														<i class="fab fa-js"></i>
+														<i class="fab fa-html5"></i>
+														<i class="fab fa-css3-alt"></i>
+													</footer>
+												</article>
+												<div class="modal eight">
+													<div class="modal-content">
+														<span class="close-button">×</span>
+														<div class="top">
+															<div class="left">
+																<div class="mySlides">
+																	<img src="./images/pic09.jpg" alt="img1">
+																	<a href="http://music-vis-js.herokuapp.com">Demo the app</a>
+																</div>
+															</div>
+															<div class="right">
+																<p class="modal-text"><br>This music visualizer was made using <strong>JavaScript</strong>, <strong>Three.js</strong>, and the <strong>Web Audio API</strong>. Watch as the earth and its surrounding
+																	colorful sound waves react to your uploaded track. By extracting and modulating the frequencies of the user's input song, vertices of the rendered objects
+																	are displaced in realtime in 3D space. <br><br>Future improvements include optimizations, functionality to customize the color and number of outer rings, and incorporating the Spotify API
+																	to allow user's to view visualization of any tracks in the Spotify database.
+																</p>
+															</div>
+												
+															<div class="row links">
+																<li class="social-link">
+																	<a href="http://music-vis-js.herokuapp.com" class="icon fa-globe"><br>Live Build</a>
+																</li>
+																<li class="social-link">
+																	<a href="https://github.com/tblarel/MusicVisualizer" class="icon fa-github"><br>Github</a>
+																</li>
+															</div>
+														</div>
+													</div>
+												</div>
+
+											<article class="item trigger four">
+												<a class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+												<header>
+													<h3>BackCountry | Scripting & Art</h3>
+												</header>
+												<footer>
+													<i class="other icon-unity"></i>
+													<i class="fas fa-code"></i>
+													<i class="fab fa-adobe"></i>
+												</footer>
+											</article>
 											<div class="modal four">
 												<div class="modal-content">
 													<span class="close-button">×</span>
@@ -459,7 +500,7 @@
 
 			<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Tristan Blarel.</li>
+						<li>Created By Tristan Blarel</li>
 					</ul>
 
 			</div>
