--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<header>
 								<h2 class="alt">Hello I'm <strong>Tristan Blarel</strong><br/></h2>
 								<p clsas="hero-text">I am a Full Stack Developer with a degree in Computer Engineering and a passion for Software and Design</p><br/>
-								<a href="./resume_june_2019.pdf" class="button download">
+								<a href="./TristanBlarel_resume_july_2019.pdf" class="button download">
 									<i class="fa fa-file" style="padding-left: .5em"></i>
 									<div class="button-text">
 										Download Resume
