Update 'other work' modal photo thumbnail

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 											</div>
 
 									<article class="item trigger seven">
-										<a class="image fit"><img src="images/match-stats.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/apollo.jpg" alt="" /></a>
 										<header>
 											<h3>Other Work</h3>
 										</header>
